--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dev = [
 testpaths = ["tests"]
 pythonpath = ["src"]
 
+[tool.pylint]
+ignored-modules = ["maya", "pymel", "pxr"]
+disable = ["missing-docstring", "too-few-public-methods", "duplicate-code", "C", "R", "W", "I"]
+
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
