--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,7 +20,7 @@ on:
   pull_request:
   push:
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - develop
 
 permissions:
   contents: read
