--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ testpaths = ["tests"]
 pythonpath = ["src"]
 
 [tool.pylint]
+ignored-modules = ["maya"]
 disable = ["too-few-public-methods", "C", "R", "W", "I"]
 
 [build-system]
