--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -57,13 +57,11 @@ jobs:
           pip install --target ./dependencies .[dev]
 
       - name: Lint Code Base
-        uses: github/super-linter@latest
+        uses: super-linter/super-linter@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: ${{ env.VALIDATE_ALL_CODEBASE }}
-          VALIDATE_JSCPD: false
           VALIDATE_PYTHON_ISORT: false
-          VALIDATE_PYTHON_MYPY: false
           LINTER_RULES_PATH: /
           PYTHON_PYLINT_CONFIG_FILE: ./pyproject.toml
           PYTHONPATH: "${{ github.workspace }}/dependencies"
