--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install Dependencies
         run: |
