add IGNORE_GENERATED_FILES option to linter configuration

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,3 +52,4 @@ jobs:
           PYTHONPATH: "${{ github.workspace }}/dependencies"
           SAVE_SUPER_LINTER_SUMMARY: true
           SAVE_SUPER_LINTER_OUTPUT: true
+          IGNORE_GENERATED_FILES: true
