--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -26,11 +26,10 @@ jobs:
     name: Lint Code Base
     runs-on: ubuntu-latest
     steps:
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Checkout Code
         uses: actions/checkout@v4
