--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -33,13 +33,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Install Dependencies
         run: |
           pip install -e .[dev] --target .venv
 
       - name: Lint Code Base
-        uses: super-linter/super-linter/slim@latest
+        uses: super-linter/super-linter/slim@ffde3b2b33b745cb612d787f669ef9442b1339a6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: true
