--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,41 +10,35 @@ permissions:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    env:
+      IMAGE: ghcr.io/${{ github.repository_owner }}/maya-brew
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf31f7 # v4.1.7
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: false
+          fetch-depth: 1
 
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/maya-brew
-          tags: |
-            type=raw,value=latest
-            type=sha
+      - name: Login to GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.repository_owner }}" --password-stdin
 
       - name: Build & Push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: |
+          set -euo pipefail
+          SHORT_SHA="${GITHUB_SHA::7}"
+          docker buildx build \
+            -t "${IMAGE}:latest" \
+            -t "${IMAGE}:sha-${SHORT_SHA}" \
+            --push \
+            .
+          echo "SHORT_SHA=${SHORT_SHA}" >> "$GITHUB_ENV"
 
       - name: Summary
         run: |
-          echo "Published tags:"
-          echo "${{ steps.meta.outputs.tags }}" | tr ' ' '\n'
+          set -euo pipefail
+          SHORT_SHA="${SHORT_SHA:-${GITHUB_SHA::7}}"
+          {
+            echo "Published tags:"
+            echo "${IMAGE}:latest"
+            echo "${IMAGE}:sha-${SHORT_SHA}"
+          } | tee -a "$GITHUB_STEP_SUMMARY"
