--- a/.github/workflows/test-mayapy.yml
+++ b/.github/workflows/test-mayapy.yml
@@ -14,8 +14,8 @@ permissions:
 jobs:
   mayapy-tests:
     runs-on: ubuntu-latest
-    env:
-      IMAGE: ghcr.io/${{ github.repository_owner }}/maya-brew:latest
+    container:
+      image: ghcr.io/${{ github.repository_owner }}/maya-brew:latest
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
