--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,7 +15,7 @@ on:
       - develop
 
 permissions:
-  contents: read
+  contents: write   # allow pushing auto-fix commits
   packages: read
   statuses: write
 
@@ -34,7 +34,10 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-
+      - name: Configure git for auto-fix commits
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - name: Install Dependencies
         run: |
           pip install -e .[dev] --target .venv
@@ -43,6 +46,10 @@ jobs:
         uses: super-linter/super-linter/slim@ffde3b2b33b745cb612d787f669ef9442b1339a6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BRANCH: develop
+          APPLY_FIXES: true           # enable auto-fixes
+          APPLY_FIXES_EVENT: push     # only attempt fixes on push (not PR)
+          APPLY_FIXES_MODE: commit    # commit directly to the branch
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_PYTHON_ISORT: false
           LINTER_RULES_PATH: /
@@ -54,3 +61,5 @@ jobs:
           IGNORE_GITIGNORED_FILES: true
           VALIDATE_GIT_COMMITLINT: false
           VALIDATE_JSCPD: false
+
+
