--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,8 +2,8 @@
 # This GitHub Actions workflow is triggered by pull requests, pushes to the
 # develop branch, and manual dispatch events. It sets up a Python environment,
 # installs project dependencies, and then runs Super-Linter on the codebase.
-# The workflow is configured to validate the entire codebase with custom
-# linting rules and saves the linter output and summary as artifacts.
+# The workflow can auto-fix issues on push (committing directly) and produce
+# a PR commit with fixes (via git-auto-commit-action) when running in PRs.
 
 name: Lint Code Base
 
@@ -15,7 +15,8 @@ on:
       - develop
 
 permissions:
-  contents: read
+  contents: write
+  statuses: write
 
 jobs:
   build:
@@ -35,9 +36,6 @@ jobs:
         run: |
           pip install -e .[dev] --target .venv
       - name: Lint Code Base
-        permissions:
-          contents: write
-          statuses: write
         uses: super-linter/super-linter/slim@ffde3b2b33b745cb612d787f669ef9442b1339a6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
