--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,17 +32,31 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 2.2.1
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
+      - name: Cache virtualenv
+        id: cache-venv
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+      - name: Install dependencies (dev + project)
+        if: steps.cache-venv.outputs.cache-hit != 'true'
+        run: |
+          poetry install --with dev --no-interaction
       - name: Prepare credentials for auto-fix (push only)
         if: github.event_name == 'push'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}"
-      - name: Install Dependencies
-        run: |
-          pip install -e .[dev] --target .venv
       - name: Lint Code Base
         uses: super-linter/super-linter/slim@ffde3b2b33b745cb612d787f669ef9442b1339a6
         env:
@@ -54,7 +68,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           LINTER_RULES_PATH: /
           PYTHON_PYLINT_CONFIG_FILE: ./pyproject.toml
-          PYTHONPATH: "${{ github.workspace }}/.venv"
+          PYTHONPATH: "${{ github.workspace }}/.venv/lib/python3.11/site-packages:${{ github.workspace }}/src"
           SAVE_SUPER_LINTER_SUMMARY: true
           ENABLE_GITHUB_ACTIONS_STEP_SUMMARY: true
           IGNORE_GENERATED_FILES: true
