--- a/.github/workflows/test-mayapy.yml
+++ b/.github/workflows/test-mayapy.yml
@@ -23,11 +23,47 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 1
-      - name: Install requirements
-        run: mayapy -m pip install .[dev]
+      - name: Set up Python (for Poetry export)
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 2.2.1
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
+      - name: Cache dependencies (pip/venv/wheelhouse)
+        id: cache-deps
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pip
+            .venv
+            wheelhouse
+          key: mayapy-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+      - name: Export pinned requirements (including dev)
+        run: |
+          poetry export -f requirements.txt --with dev --without-hashes -o requirements-dev.txt
+          echo "Exported requirements:" && head -n 20 requirements-dev.txt || true
+      - name: Download dependency wheels (host Python)
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: |
+          python -m pip install --upgrade pip
+          mkdir -p wheelhouse
+          pip download -r requirements-dev.txt -d wheelhouse
+          echo "Wheelhouse contents (truncated):" && ls -1 wheelhouse | head -n 40 || true
+      - name: Install deps into mayapy from wheelhouse (offline)
+        run: |
+          mayapy -m pip install --upgrade pip
+          mayapy -m pip install --no-index --find-links wheelhouse -r requirements-dev.txt
+      - name: Install project (source)
+        run: |
+          mayapy -m pip install .
       - name: Run pytest
         shell: bash
-        run: mayapy -m pytest tests/
+        run: mayapy -m pytest tests/ -q
       - name: Summary
         if: success()
-        run: echo "mayapy pytest run succeeded." >> "$GITHUB_STEP_SUMMARY"
+        run: echo "mayapy pytest run succeeded (offline wheelhouse install)." >> "$GITHUB_STEP_SUMMARY"
