--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -28,12 +28,12 @@ jobs:
         with:
           python-version: "3.11"
       - name: Checkout Code
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
           persist-credentials: false
       - name: Install Poetry
-        uses: snok/install-poetry@v1
+        uses: snok/install-poetry@56b0cd341142dac1891eb3e08ba47a22799bbd05
         with:
           version: 2.2.1
           virtualenvs-create: true
