--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -33,15 +34,8 @@ jobs:
       - name: Install dynamic versioning plugin
         run: poetry self add "poetry-dynamic-versioning[plugin]>=1.4.0"
 
-      - name: Cache virtualenv
-        id: cache-venv
-        uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-
       - name: Install dependencies (no root)
-        run: poetry install --no-interaction --no-root
+        run: poetry install --no-interaction --no-root --sync
 
       - name: Show resolved dynamic version
         run: poetry dynamic-versioning show || echo "(Command not available; plugin should still run during build)"
