--- a/.github/workflows/test-mayapy.yml
+++ b/.github/workflows/test-mayapy.yml
@@ -23,43 +23,40 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 1
-      - name: Set up Python (for Poetry export)
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-      - name: Install Poetry
-        uses: snok/install-poetry@56b0cd341142dac1891eb3e08ba47a22799bbd05
-        with:
-          version: 2.2.1
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-      - name: Cache dependencies (pip/venv/wheelhouse)
+      - name: Install Poetry into mayapy
+        run: |
+          set -eux
+          # pip already available in mayapy; just upgrade tooling and install Poetry
+          mayapy -m pip install --upgrade pip setuptools wheel
+          mayapy -m pip install "poetry==1.8.3"
+          mayapy -m poetry --version
+      - name: Cache wheelhouse
         id: cache-deps
         uses: actions/cache@v4
         with:
           path: |
             ~/.cache/pip
-            .venv
             wheelhouse
           key: mayapy-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
       - name: Export pinned requirements (including dev)
         run: |
-          poetry export -f requirements.txt --with dev --without-hashes -o requirements-dev.txt
-          echo "Exported requirements:" && head -n 20 requirements-dev.txt || true
-      - name: Download dependency wheels (host Python)
+          set -eux
+          mayapy -m poetry export -f requirements.txt --with dev --without-hashes -o requirements-dev.txt
+          echo "Exported requirements (first lines):" && head -n 20 requirements-dev.txt || true
+      - name: Download dependency wheels (mayapy Python)
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: |
-          python -m pip install --upgrade pip
+          set -eux
           mkdir -p wheelhouse
-          pip download -r requirements-dev.txt -d wheelhouse
+          mayapy -m pip download -r requirements-dev.txt -d wheelhouse
           echo "Wheelhouse contents (truncated):" && find wheelhouse -mindepth 1 -maxdepth 1 -type f | sed 's#.*/##' | head -n 40 || true
       - name: Install deps into mayapy from wheelhouse (offline)
         run: |
-          mayapy -m pip install --upgrade pip
+          set -eux
           mayapy -m pip install --no-index --find-links wheelhouse -r requirements-dev.txt
       - name: Install project (source)
         run: |
+          set -eux
           mayapy -m pip install .
       - name: Run pytest
         shell: bash
