--- a/.github/workflows/test-mayapy.yml
+++ b/.github/workflows/test-mayapy.yml
@@ -24,7 +24,7 @@ jobs:
           persist-credentials: false
           fetch-depth: 1
       - name: Install uv
-        run: pip install uv
+        run: mayapy -m pip install uv
       - name: Cache Python dependencies
         uses: actions/cache@v4
         with:
