--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install uv
         run: pip install uv
       - name: Sync dependencies
-        run: uv pip sync requirements.lock
+        run: uv pip sync --system requirements.lock
       - name: Prepare credentials for auto-fix (push only)
         if: github.event_name == 'push'
         env:
