feat: re-add optional development dependencies for testing after refactor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ dependencies = [
     "colorama",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "maya-stubs"
+]
+
 [project.urls]
 Homepage = "https://github.com/mortenbohne/maya-brew"
 Repository = "https://github.com/mortenbohne/maya-brew"
