--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,25 +23,14 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Poetry
-        uses: snok/install-poetry@56b0cd341142dac1891eb3e08ba47a22799bbd05
-        with:
-          version: 2.2.1
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+      - name: Install build dependencies (uv)
+        run: |
+          pip install uv
 
-      - name: Install dynamic versioning plugin
-        run: poetry self add "poetry-dynamic-versioning[plugin]>=1.4.0"
+      - name: Build distribution (wheel + sdist) with uv (dynamic version from latest tag)
+        run: |
+          uv build
 
-      - name: Install dependencies (no root)
-        run: poetry install --no-interaction --no-root --sync
-
-      - name: Show resolved dynamic version
-        run: poetry dynamic-versioning show || echo "(Command not available; plugin should still run during build)"
-
-      - name: Build distribution (dynamic version applied)
-        run: poetry build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
