--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -69,14 +69,14 @@ jobs:
           ENABLE_GITHUB_ACTIONS_STEP_SUMMARY: true
           IGNORE_GENERATED_FILES: true
           IGNORE_GITIGNORED_FILES: true
-          VALIDATE_CHECKOV: false
+          VALIDATE_CHECKOV: true
           VALIDATE_TERRAFORM: false
           VALIDATE_KUBERNETES: false
           VALIDATE_BASH: false
           VALIDATE_POWERSHELL: false
           VALIDATE_JAVASCRIPT_ES: false
           VALIDATE_TYPESCRIPT_ES: false
-          VALIDATE_GITLEAKS: false
+          VALIDATE_GITLEAKS: true
           FIX_ENV: true
           FIX_GITHUB_ACTIONS_ZIZMOR: true
           FIX_JSON_PRETTIER: true
