--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,6 +32,13 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
+      - name: Fetch base branch (PR only)
+        if: github.event_name == 'pull_request'
+        run: |
+          git fetch --no-tags --prune --depth=0 origin "${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}"
+      - name: Export GITHUB_BEFORE_SHA (PR only)
+        if: github.event_name == 'pull_request'
+        run: echo "GITHUB_BEFORE_SHA=${{ github.event.pull_request.base.sha }}" >> $GITHUB_ENV
       - name: Cache Python dependencies
         uses: actions/cache@v4
         with:
