--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -69,6 +69,7 @@ jobs:
           ENABLE_GITHUB_ACTIONS_STEP_SUMMARY: true
           VALIDATE_CHECKOV: true
           VALIDATE_GITLEAKS: true
+          VALIDATE_GITHUB_ACTIONS_ZIZMOR: true
           FIX_GITHUB_ACTIONS_ZIZMOR: true
           FIX_JSON_PRETTIER: true
           FIX_JSON: true
