--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -71,13 +71,16 @@ jobs:
           VALIDATE_GITLEAKS: true
           VALIDATE_GITHUB_ACTIONS_ZIZMOR: true
           VALIDATE_JSON: true
+          VALIDATE_JSON_PRETTIER: true
+          VALIDATE_MARKDOWN: true
+          VALIDATE_MARKDOWN_PRETTIER: true
+          VALIDATE_NATURAL_LANGUAGE: true
           FIX_GITHUB_ACTIONS_ZIZMOR: true
           FIX_JSON_PRETTIER: true
           FIX_JSON: true
           FIX_MARKDOWN_PRETTIER: true
           FIX_MARKDOWN: true
           FIX_NATURAL_LANGUAGE: true
-          FIX_POWERSHELL: true
           FIX_PYTHON_BLACK: true
           FIX_PYTHON_ISORT: true
           FIX_PYTHON_RUFF: true
