--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,39 @@
 [project]
 name = "maya-brew"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Safe interaction with python in maya"
-authors = [
-    {name = "Morten Bøhne", email = "github@mortenbohne.dk"}
-]
-license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.7"
+license = "MIT"
+keywords = ["maya", "autodesk", "3d", "pipeline"]
+requires-python = ">=3.11"
+authors = [
+    { name = "Morten Bøhne", email = "github@mortenbohne.dk" }
+]
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Intended Audience :: Developers",
+    "Topic :: Multimedia :: Graphics :: 3D Modeling",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
 dependencies = [
+    "structlog",
+    "colorama",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest",
-    "maya-stubs",
-    "structlog",
-    "colorama"
+    "maya-stubs"
 ]
+
+[project.urls]
+Homepage = "https://github.com/mortenbohne/maya-brew"
+Repository = "https://github.com/mortenbohne/maya-brew"
+Documentation = "https://github.com/mortenbohne/maya-brew#readme"
+Issues = "https://github.com/mortenbohne/maya-brew/issues"
+Changelog = "https://github.com/mortenbohne/maya-brew/releases"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -29,7 +45,14 @@ disable = ["too-few-public-methods", "C", "R", "W", "I"]
 
 [tool.mypy]
 mypy_path = ["src"]
+disallow_untyped_defs = true
+
+[tool.hatch.version]
+source = "vcs"
+# Accept tags with or without leading 'v': v1.2.3 or 1.2.3 (+ optional suffixes)
+pattern = "^v?(?P<version>\\d+\\.\\d+\\.\\d+(?:[\\w\\.-]*)?)$"
+fallback-version = "0.0.0"
 
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
