--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
-    environment: testpypi
+    environment: pypi
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
