--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish to TestPyPI
+name: Publish to PyPI
 
 on:
   release:
@@ -11,7 +11,8 @@ permissions:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
-    environment: testpypi
+    environment: pypi
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
@@ -38,9 +39,9 @@ jobs:
           name: dist-artifacts
           path: dist/*
 
-      - name: Publish to TestPyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@ab69e431e9c9f48a3310be0a56527c679f56e04d
         with:
-          repository-url: https://test.pypi.org/legacy/
+          repository-url: https://pypi.org/legacy/
           packages-dir: dist
           skip-existing: true
